Add Link Cdjns For Remixicon

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/node_modules/remixicon/fonts/remixicon.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
+      integrity="sha512-HXXR0l2yMwHDrDyxJbrMD9eLvPe3z3qL3PPeozNTsiHJEENxx8DH2CxmV05iwG0dwoz5n4gQZQyYLUNt1Wdgfg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link href="./dist/output.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
@@ -349,11 +355,18 @@
                 </div>
               </div>
             </div>
-          </div> 
-          <div class="bg-white rounded-lg text-center flex flex-col items-center space-y-5 justify-center p-2">
-              <h1 class="text-xl font-bold">The Unique power Of One</h1>
-              <p class="text-sm text-gray-500">With just one contact system invoice, we aim to help simplify you WorkK.</p>
-              <button class="p-2 text-purple-400 rounded-md  bg-purple-200">Create invoice</button>
+          </div>
+          <div
+            class="bg-white rounded-lg text-center flex flex-col items-center space-y-5 justify-center p-2"
+          >
+            <h1 class="text-xl font-bold">The Unique power Of One</h1>
+            <p class="text-sm text-gray-500">
+              With just one contact system invoice, we aim to help simplify you
+              WorkK.
+            </p>
+            <button class="p-2 text-purple-400 rounded-md bg-purple-200">
+              Create invoice
+            </button>
           </div>
         </div>
       </main>
